# techfig

./: .gitignore  BRAINSTORM.md  COMPARISON.md  DEPLOYMENT_PLAN.md  PLAN.md  README.md  SKILL.md  benchmark_defs.py  benchmark_spec.json  brainstorm-svg-improvement.md  inkscape_improvement_plan.md  pyproject.toml  railway.json
.a0proj/: project.json
.a0proj/memory/: index.faiss  index.pkl  knowledge_import.json
.agents/workflows/: use_techfig.md
.github/workflows/: python-publish.yml  test.yml
examples/: agent_critique_demo.py  autoresearch_demo.py  batch_manifest.yaml  diagram_anim_spec.json  make_chart.py  make_diagram.py  make_equation.py  make_manim_diagram.py  make_mzi.py  make_pendulum.py  make_showcase.py  make_slides.py  math_widget.html  math_widget_spec.json  optical_diagram_spec.json  panel_spec.json  reconstruct_diagram.py  sample_data.csv  vectorize_image.py
examples/_manim_media/videos/_techfig_diagram_scene/480p15/partial_movie_files/DiagramScene/: partial_movie_file_list.txt
examples/figures/: brdf_anisotropic_solar_cell_fig1_spec.json  light_trapping_comparison.md  light_trapping_pc_solar_cell_fig1_spec.json  test_photonic_crystals_full2_fig1_spec.json
scripts/: install_manim_mac.sh
techfig/: __init__.py  cli.py  mcp_server.py
techfig/components/: __init__.py  lab_folder.py  registry.py  standard.py
techfig/engines/: __init__.py  aesthetic_critic.py  animations.py  autoresearch.py  batch.py  diagram_manim_bridge.py  diagrams.py  equations.py  fallback.py  figures.py  geo_linter.py  interactive.py  interactive_math.py  panels.py  pretty.py  program.md  sketch_interpreter.py  slides.py  svg_animator.py  tikz_export.py  vectorize.py
techfig/styles/: __init__.py  presets.py
techfig/templates/: neural_network.json  optical_bench.json
techfig/utils/: __init__.py  config.py  data_loader.py  export.py  svg_builder.py
templates/styles/: example_custom.yaml
tests/: experiment_log.json  output_presentation.pptx  sample_chart_data.json  sample_diagram_data.json  sample_slides_data.json  test_animations.py  test_arrows_paths.py  test_batch.py  test_cli.py  test_components.py  test_diagrams.py  test_equations.py  test_export.py  test_fallback.py  test_figures.py  test_font_metrics.py  test_geo_linter.py  test_interactive.py  test_plot_element.py  test_presets.py  test_pretty.py  test_sketch_interpreter.py  test_slides.py  test_svg_builder_defs.py  test_svg_builder_style.py  test_tikz.py  test_vectorize.py
web/api/: main.py  requirements.txt
web/frontend/: app.js  index.html  style.css  templates.js
