[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "techfig"
version = "1.0.0"
description = "CLI toolkit for scientists to create publication-quality figures, editable SVG diagrams, and PowerPoint presentations."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Harshil" },
]
keywords = ["scientific", "figures", "diagrams", "svg", "powerpoint", "visualization", "cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "python-pptx>=0.6.23",
    "drawsvg>=2.3",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "pyyaml>=6.0",
    "svg2png>=1.2",
    "vtracer>=0.6",
    "schemdraw>=0.22",
    "scipy>=1.10",
    "litellm>=1.82.4",
    "cairosvg>=2.9.0",
    "pillow>=12.1.1",
    "playwright>=1.58.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
    "python-multipart>=0.0.22",
    "mcp>=1.0",
]
genai = ["google-genai>=1.0"]
interactive = ["plotly>=5.18"]
animation = ["manim>=0.18"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]
all = ["techfig[web,genai,interactive,dev]"]

[project.scripts]
techfig = "techfig.cli:main"

[project.urls]
Homepage = "https://github.com/harshil/techfig"
Repository = "https://github.com/harshil/techfig"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
